fix tags in zalopc.nuspec

--- a/zalopc/zalopc.nuspec
+++ b/zalopc/zalopc.nuspec
@@ -9,7 +9,7 @@
     <summary>Zalo PC for Windows</summary>
     <description>Zalo PC for Windows - A Vietnamese messaging app</description>
     <projectUrl>https://zalo.me/pc</projectUrl>
-    <tags>Vietnamese, messaging, zalo, video, chat</tags>
+    <tags>Vietnamese messaging zalo video chat</tags>
     <requireLicenseAcceptance>false</requireLicenseAcceptance> <!-- or true if you require the user to accept the License before installing -->
     <iconUrl>https://stc-zaloprofile.zdn.vn/pc/v1/images/zalo_sharelogo.png</iconUrl>
   </metadata>
