--- a/pdfarranger/pdfarranger.nuspec
+++ b/pdfarranger/pdfarranger.nuspec
@@ -6,7 +6,9 @@
     <version>1.6.2</version>
     <authors>pdfarranger</authors>
     <summary>pdfarranger for Windows</summary>
-    <description>Small python-gtk application, which helps the user to merge or split pdf documents and rotate, crop and rearrange their pages using an interactive and intuitive graphical interface</description>
+    <description>*pdfarranger* is a small python-gtk application, which helps the user to merge or split pdf documents and rotate, crop and rearrange their pages using an interactive and intuitive graphical interface. It is a frontend for [pikepdf](https://github.com/pikepdf/pikepdf).
+	
+	*pdfarranger* is a fork of Konstantinos Poulios's pdfshuffler (see [Savannah](https://savannah.nongnu.org/projects/pdfshuffler) or [Sourceforge](http://sourceforge.net/projects/pdfshuffler)). It’s a humble attempt to make the project a bit more active.</description>
     <projectUrl>https://github.com/pdfarranger/pdfarranger</projectUrl>
     <tags>pdfarranger pdf merge split rotate crop rearrange gui</tags>
 	<licenseUrl>https://github.com/pdfarranger/pdfarranger/blob/master/COPYING</licenseUrl>
