--- a/vietex/vietex.nuspec
+++ b/vietex/vietex.nuspec
@@ -7,7 +7,20 @@
     <authors>Nguyen Huu Dien</authors>
     <owners>Nguyen Huu Dien</owners>
     <summary>VieTeX for Windows</summary>
-    <description>A Vietnamese TeX Editor (Chương trình soạn thảo TeX)</description>
+    <description>A TeX Editor for Vietnamese (Chương trình soạn thảo TeX)
+### Feattures
+
+* VieTeX Editor was based on Scintilla edit control (v2.1). 
+* Allows syntax highlighting for TeX.
+* Works on Windows XP, Vista, 7, 8, and later.
+* Supports for Unicode text files, spell check English and Vietnamese.
+* Supports usual editing functions, inner keystroke macros for TeX files, Autocomplete, Folding, Coloring, Abbreviation, Script text, ...
+* Includes several Vietnamese Templates and Guides.
+
+### Note
+
+The default settings in VieTeX work best with [MikTeX](https://miktex.org/). 
+	</description>
     <projectUrl>https://nhdien.wordpress.com</projectUrl>
     <tags>vietex tex editor Vietnamese</tags>
     <requireLicenseAcceptance>false</requireLicenseAcceptance> <!-- or true if you require the user to accept the License before installing -->
