--- a/zalopc/zalopc.nuspec
+++ b/zalopc/zalopc.nuspec
@@ -5,7 +5,7 @@
     <title>ZaloPC</title>
     <version>20.12.1</version>
     <authors>VNG Corporation</authors>
-    <owners>VNG Corporation</owners>
+    <owners>hoanganhduc</owners>
     <summary>Zalo PC for Windows</summary>
     <description>Zalo PC for Windows - A Vietnamese messaging app
 ### Features
