--- a/zalopc/zalopc.nuspec
+++ b/zalopc/zalopc.nuspec
@@ -3,7 +3,7 @@
   <metadata>
     <id>zalopc</id>
     <title>ZaloPC</title>
-    <version>21.3.3.1</version>
+    <version>21.3.3-u1</version>
     <authors>VNG Corporation</authors>
     <owners>hoanganhduc</owners>
     <summary>Zalo PC for Windows</summary>
