--- a/flaashboot/flashboot.nuspec
+++ b/flaashboot/flashboot.nuspec
@@ -3,7 +3,7 @@
   <metadata>
     <id>flashboot</id>
     <title>FlashBoot</title>
-    <version>3.3-j</version>
+    <version>3.3-k</version>
     <authors>PrimeExpert Software</authors>
     <owners>hoanganhduc</owners>
     <summary>FlashBoot for Windows</summary>
