--- a/pdfarranger/pdfarranger.nuspec
+++ b/pdfarranger/pdfarranger.nuspec
@@ -17,7 +17,7 @@
     <requireLicenseAcceptance>false</requireLicenseAcceptance> <!-- or true if you require the user to accept the License before installing -->
 	<packageSourceUrl>https://github.com/pdfarranger/pdfarranger</packageSourceUrl>
     <dependencies>
-      <dependency id="autohotkey.portable" version="1.1.33.02" />
+      <dependency id="autohotkey.portable" version="[1.1.33.02,1.1.34.04]" />
     </dependencies>
   </metadata>
 </package>
