--- a/softether-vpn-client/softether-vpn-client.nuspec
+++ b/softether-vpn-client/softether-vpn-client.nuspec
@@ -16,7 +16,7 @@
     <requireLicenseAcceptance>false</requireLicenseAcceptance> <!-- or true if you require the user to accept the License before installing -->
 	<packageSourceUrl>https://www.softether.org/</packageSourceUrl>
     <dependencies>
-      <dependency id="autohotkey.portable" version="1.1.33.02" />
+      <dependency id="autohotkey.portable" version="[1.1.33.02,1.1.34.04]" />
     </dependencies>
   </metadata>
 </package>
