--- a/softether-vpn-client/softether-vpn-client.nuspec
+++ b/softether-vpn-client/softether-vpn-client.nuspec
@@ -3,7 +3,7 @@
   <metadata>
     <id>softether-vpn-client</id>
     <title>SoftEther VPN Client</title>
-    <version>4.41.9787</version>
+    <version>4.43.9799</version>
     <authors>SoftEther Project, University of Tsukuba, Japan</authors>
 	<owners>hoanganhduc</owners>
     <summary>SoftEther VPN Client for Windows</summary>
@@ -17,6 +17,7 @@
 	<packageSourceUrl>https://www.softether.org/</packageSourceUrl>
     <dependencies>
       <dependency id="autohotkey.portable" version="[1.1.33.02,1.1.34.04]" />
+      <dependency id="vcredist140" version="14.36.32532" />
     </dependencies>
   </metadata>
 </package>
