--- a/softether-vpn-client/softether-vpn-client.nuspec
+++ b/softether-vpn-client/softether-vpn-client.nuspec
@@ -17,7 +17,7 @@
 	<packageSourceUrl>https://www.softether.org/</packageSourceUrl>
     <dependencies>
       <dependency id="autohotkey.portable" version="[1.1.33.02,1.1.34.04]" />
-      <dependency id="vcredist140" version="14.36.32532" />
+      <!-- <dependency id="vcredist140" version="14.36.32532" /> -->
     </dependencies>
   </metadata>
 </package>
