--- a/pdfarranger/pdfarranger.nuspec
+++ b/pdfarranger/pdfarranger.nuspec
@@ -3,7 +3,7 @@
   <metadata>
     <id>pdfarranger</id>
     <title>pdfarranger</title>
-    <version>1.11.1</version>
+    <version>1.11.1.0</version>
     <authors>PDF-Arranger developer team</authors>
 	<owners>hoanganhduc</owners>
     <summary>pdfarranger for Windows</summary>
@@ -17,7 +17,7 @@
     <requireLicenseAcceptance>false</requireLicenseAcceptance> <!-- or true if you require the user to accept the License before installing -->
 	<packageSourceUrl>https://github.com/pdfarranger/pdfarranger</packageSourceUrl>
     <dependencies>
-      <dependency id="autohotkey.portable" version="[1.1.33.02,1.1.34.04]" />
+      <dependency id="autohotkey.portable" />
     </dependencies>
   </metadata>
 </package>
