--- a/ffsj/ffsj.nuspec
+++ b/ffsj/ffsj.nuspec
@@ -27,7 +27,7 @@ FFSJ is...
     <licenseUrl>http://www.fastfilejoiner.com/</licenseUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance> <!-- or true if you require the user to accept the License before installing -->
     <dependencies>
-      <dependency id="autohotkey.portable" version="1.1.33.02" />
+      <dependency id="autohotkey.portable" />
     </dependencies>
   </metadata>
 </package>
